--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -2,9 +2,11 @@
 $black: #101010;
 $grey-50: #474747;
 $grey-10: #131214;
+$grey-80: #cccccc;
 $white: #ffffff;
 $green: #6dd85b;
 $red: #ef6060;
+$orange: #e89641;
 
 
 /* Tokens */
@@ -16,5 +18,6 @@ $color-border-dark: $grey-50;
 $color-border-darker: $black;
 
 $color-font: $white;
+$color-font--hover: $grey-80;
 $color-font-darker: $black;
 $color-font-dark: $grey-50;
