--- a/src/assets/scss/_globals.scss
+++ b/src/assets/scss/_globals.scss
@@ -15,3 +15,34 @@ div, button, span, section, main {
 hr {
   border: 0;
 }
+
+/* HELPER CLASSES */
+
+.margin-horizontal {
+  &--large {
+    margin-left: 80px;
+    margin-right: 80px;
+  }
+}
+
+.color {
+  &--red {
+    color: $red;
+  }
+
+  &--white {
+    color: $white;
+  }
+
+  &--green {
+    color: $green;
+  }
+
+  &--blue {
+    color: $blue;
+  }
+
+  &--violet {
+    color: $violet;
+  }
+}
