Add ChainSolver game and restructure project

--- a/src/assets/scss/_globals.scss
+++ b/src/assets/scss/_globals.scss
@@ -53,6 +53,14 @@ hr {
   &--violet {
     color: $violet;
   }
+
+  &--grey {
+    color: $grey-50;
+  }
+
+  &--orange {
+    color: $orange;
+  }
 }
 
 .background {
