Improve responsive design for GameWrapper and Home

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -1,6 +1,7 @@
 /* GLOBAL COLORS */
 $black: #101010;
 $grey-10: #131214;
+$grey-40: #313131;
 $grey-50: #474747;
 $grey-80: #cccccc;
 $white: #ffffff;
