--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,10 +1,5 @@
-// @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&text=%e2%86%90%e2%86%92&family=Major+Mono+Display&family=Righteous&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@900&text=%e2%86%90%e2%86%92');
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black');
-@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display');
+// font imports in index.html
 
-// font-family: 'Alegreya Sans', sans-serif;
-// font-family: 'Archivo Black', sans-serif;
-// font-family: 'Major Mono Display', monospace;
-// font-family: 'Righteous', cursive;
+$font-title: 'Major Mono Display', monospace;
+$font-main: 'Azeret Mono', monospace;
+$font-secondary: 'Azeret Mono', monospace;
