--- a/src/assets/scss/_globals.scss
+++ b/src/assets/scss/_globals.scss
@@ -2,6 +2,7 @@ html, body {
   margin: 0;
   padding: 0;
   color: $color-font;
+  font-size: 12px;
 }
 
 h1, h2, h3, h4, h5, h6, hr {
@@ -16,14 +17,29 @@ hr {
   border: 0;
 }
 
-/* HELPER CLASSES */
+/* MEDIA QUERIES */
 
-.margin-horizontal {
-  &--large {
-    margin-left: 80px;
-    margin-right: 80px;
+@media only screen and (min-width: 500px) {
+  html {
+    font-size: 16px;
   }
 }
+
+/* SCROLLBAR */
+
+::-webkit-scrollbar {
+  width: 0.3rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $grey-50;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: $grey-40;
+}
+
+/* HELPER CLASSES */
 
 .border {
   &-left {
