--- a/src/assets/scss/_globals.scss
+++ b/src/assets/scss/_globals.scss
@@ -99,4 +99,16 @@ hr {
   &--empty {
     border: 1px solid $color-border-dark;
   }
+
+  &--light {
+    background: $grey-80;
+
+    &.hoverable:hover {
+      background: $grey-70;
+    }
+  }
+}
+
+.clickable {
+  cursor: pointer;
 }
