--- a/src/assets/scss/styles.scss
+++ b/src/assets/scss/styles.scss
@@ -1,4 +1,4 @@
-@import "./_variables.scss";
-@import "./_typography.scss";
-@import "./_colors.scss";
-@import "./_globals.scss";
+@import "./variables";
+@import "./typography";
+@import "./colors";
+@import "./globals";
