Fix iPhone appearance

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -30,3 +30,4 @@ $color-font: $white;
 $color-font--hover: $grey-80;
 $color-font-darker: $black;
 $color-font-dark: $grey-50;
+$color-font-secondary: $grey-60;
