Add QuickTapper and QuickStacker games

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -15,6 +15,12 @@ $red: #ef6060;
 $orange: #e89641;
 $blue: #1291ff;
 $violet: #b523ff;
+$yellow: #fff349;
+
+$green--hover: #5bb14b;
+$red--hover: #ca5252;
+$blue--hover: #187acf;
+$yellow--hover: #ddd33f;
 
 /* Tokens */
 
