--- a/src/assets/scss/_typography.scss
+++ b/src/assets/scss/_typography.scss
@@ -1,5 +1,7 @@
 // font imports in index.html
 
 $font-title: 'Major Mono Display', monospace;
-$font-main: 'Azeret Mono', monospace;
+// $font-main: 'Azeret Mono', monospace;
 $font-secondary: 'Azeret Mono', monospace;
+
+$font-main: 'Aldrich', sans-serif;
