--- a/src/assets/scss/_themes.scss
+++ b/src/assets/scss/_themes.scss
@@ -3,9 +3,12 @@ $themes: (
     bg: $bg--light,
     bg-secondary: $bg--lighter,
     bg-hover: $bg--light--hover,
+    bg-disabled: $bg--light--disabled,
+    bg-disabled-hover: $bg--light--disabled--hover,
     text: $text--light,
     text-hover: $text--light--hover,
     text-secondary: $text--light--secondary,
+    text-disabled: $text--light--disabled,
     border: $border--light,
     border-theme: transparent,
     border-hover: $border--light--hover,
@@ -14,9 +17,12 @@ $themes: (
     bg: $bg--dark,
     bg-hover: $bg--dark--hover,
     bg-secondary: $bg--darker,
+    bg-disabled: $bg--dark--disabled,
+    bg-disabled-hover: $bg--dark--disabled--hover,
     text: $text--dark,
     text-hover: $text--dark--hover,
     text-secondary: $text--dark--secondary,
+    text-disabled: $text--dark--disabled,
     border: $border--dark,
     border-theme: $border--dark,
     border-hover: $border--dark--hover,
